--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -33,7 +33,7 @@ body{
     padding-bottom: 20px;
     text-align: center;
     vertical-align: middle;
-
+    text-transform: capitalize
  }
        
 
